--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Get the latest data
-        run: curl -L -X 'https://script.google.com/macros/s/AKfycbzpf25Ji-4wUKc7wvV1yjvhowR-vkrpzukrUc7fQdprBLovAetNr83ju7Am4vuaNiRo/exec?action=all' > result/index.json
+        run: mkdir -p result
+           | curl -L -X 'https://script.google.com/macros/s/AKfycbzpf25Ji-4wUKc7wvV1yjvhowR-vkrpzukrUc7fQdprBLovAetNr83ju7Am4vuaNiRo/exec?action=all' > result/index.json
 
       - name: Push artifact to gh-pages
         if: success()
