--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
            mkdir -p ./result
            touch ./result/index.json
-           curl -L -X 'https://script.google.com/macros/s/AKfycbzpf25Ji-4wUKc7wvV1yjvhowR-vkrpzukrUc7fQdprBLovAetNr83ju7Am4vuaNiRo/exec?action=all' > ./result/index.json
+           curl -L -X GET 'https://script.google.com/macros/s/AKfycbzpf25Ji-4wUKc7wvV1yjvhowR-vkrpzukrUc7fQdprBLovAetNr83ju7Am4vuaNiRo/exec?action=all' > ./result/index.json
 
       - name: Push artifact to gh-pages
         if: success()
