--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         if: success()
         uses: crazy-max/ghaction-github-pages@v2.4.1
         with:
-          target_branch: main
+          target_branch: bin
           build_dir: output
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
