--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,24 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 14.x
+      
+      - name: Install dependency
+        run: sudo apt -y install libvips libvips-dev
+      
+      - name: Checkout the script
+        uses: actions/checkout@v2.3.4
+        with:
+          ref: bin
+          path: bin
 
-      - name: Get the latest data
-        run: |
-           mkdir -p ./result
-           touch ./result/index.json
-           curl -L -X GET 'https://script.google.com/macros/s/AKfycbxkGeSRx3QMBSyCLIZCMlAjy_iqxz7e_1B3eyrhmDifjUyFUR5U53gRF_9oF78sLlgI/exec?action=all' > ./result/index.json
-
+      - name: Execute the script
+        run: node bin/app.js
+        
       - name: Push artifact to gh-pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2.4.1
