--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
     "start": "dotnet fable watch src --run webpack-dev-server"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.0",
     "@types/sharp": "^0.28.3",
-    "copy-webpack-plugin": "^8.0.0",
-    "node-loader": "^2.0.0",
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "rollup": "^2.50.5"
   },
   "dependencies": {
-    "@types/mime-types": "^2.1.0",
     "mime-types": "^2.1.31",
     "node-fetch": "^2.6.1",
     "sharp": "^0.28.3"
