--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "start": "dotnet fable watch src --run webpack-dev-server"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/mime-types": "^2.1.0",
     "@types/sharp": "^0.28.3",
-    "rollup": "^2.50.5"
+    "rollup": "^2.50.5",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-natives": "^0.7.2"
   },
   "dependencies": {
     "mime-types": "^2.1.31",
