--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: CI
 
 # Controls when the action will run. 
 on:
+  schedule:
+    - cron: 0 0 * * *
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
