--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
           path: bin
           
       - name: Install dependency of the script
-        run: cd bin && npm install
+        run: |
+          apt install -y libvips-dev
+          cd bin && npm install
 
       - name: Execute the script
         run: node bin/app.js
